--- a/gamejam_style3.css
+++ b/gamejam_style3.css
@@ -8,6 +8,12 @@ body{
     background-color: rgb(0, 0, 0);
 }
 
+hr{
+    border-color: white;
+    opacity: 0.6;
+    margin: 32px 0;
+}
+
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: black;
     background-color:white;
@@ -28,23 +34,26 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 24px 0 32px;
 }
 
 .ggf{
     
-    width: 600px;
+    width: min(720px, 90%);
 }
 
 .text01{
-    width: 800px;
-    border: 1px solid black;
-    margin: auto;
-    
+    width: min(960px, 90%);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    margin: 0 auto 48px;
+    padding: 32px 36px;
+    background: rgba(255, 255, 255, 0.02);
 }
 
 .firestyle{
-    width: 900px;
-    height: 300px;
+    width: min(900px, 95%);
+    height: auto;
 }
 
 
@@ -53,6 +62,7 @@ body{
 h3{
     font-family: Pixel;
     color: white;
+    margin: 24px 0 16px;
 
 }
 
@@ -63,8 +73,11 @@ h4{
 }
 
 .colortext01{
-    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
     color: white;
+    line-height: 1.7;
+    margin-bottom: 24px;
 }
 
 .colortext02{
@@ -75,10 +88,12 @@ h4{
 
 .text02{
     text-align: left;
-    width: 40%;
-    border: 1px solid black;
-    margin: auto;
-    
+    width: min(720px, 90%);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    margin: 0 auto 48px;
+    padding: 32px 36px;
+    background: rgba(255, 255, 255, 0.02);
 }
 
 .colortext01_01{
@@ -114,13 +129,11 @@ h4{
    
     .text02{
         text-align: left;
-        width: 80%;
-        border: 1px solid black;
-        margin: auto;
-        
+        width: min(720px, 92%);
+        padding: 32px;
     }
     .colortext01{
-        font-size: 40px;
+        font-size: 24px;
     }
     h3{
         font-size: 50px;
@@ -144,7 +157,7 @@ h4{
 @media screen and (max-width: 480px) {
 
     .colortext01{
-        font-size: 40px;
+        font-size: 20px;
     }
     h3{
         font-size: 50px;
@@ -165,10 +178,8 @@ h4{
     
     .text02{
         text-align: left;
-        width: 80%;
-        border: 1px solid black;
-        margin: auto;
-        
+        width: min(720px, 94%);
+        padding: 24px;
     }
     
 }
@@ -176,7 +187,7 @@ h4{
 @media screen and (max-width: 320px) {
 
     .colortext01{
-        font-size: 40px;
+        font-size: 18px;
     }
     h3{
         font-size: 50px;
@@ -197,11 +208,8 @@ h4{
     
     .text02{
         text-align: left;
-        width: 80%;
-        border: 1px solid black;
-        margin: auto;
-        
+        width: min(720px, 96%);
+        padding: 20px;
     }
    
 }
-
